--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /Retuow/.vs
+/Retuow/packages/EntityFramework.6.2.0
+/Retuow/Retuow/bin/EntityFramework.SqlServer.dll
+/Retuow/Retuow/bin/EntityFramework.dll
